# Convergence

./: .gitignore  DEVELOPMENT_PROGRESS.md  DEVELOPMENT_STATUS.md  README.md  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 09bcd6505f73_baseline.py  7d569b4ad4e5_add_domain_level_tables_for_sql_server.py  889b6461f8d4_baseline.py  ab8681a82333_add_institutions_code.py
client/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: index.css  main.js
docs/: BFS.docx  business-functional-specification.md  business-requirements-specification.md  project-deliverables.md  system-architecture-design.md  technical-specifications.md
docs/architecture/: blueprint.md  enterprise_readiness.md  logical_data_model.md  process_flow.md  system_diagram.md
docs/guides/: AI_CONFIGURATION.md  AI_HANDOFF_GUIDE.md  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  WORLDWIDE_ACCESS_GUIDE.md
docs/runbooks/: ngrok_setup_instructions.md
docs/specs/: functional_spec.md
scripts/: create-venv.ps1  dev.ps1  migrate.ps1  run.ps1  seed_data.py  seed_mssql.py  test_api.py
scripts/windows/: expose_current_setup.ps1  expose_worldwide.ps1  launch_convergence.ps1  setup_ngrok.ps1  start_convergence_free.ps1  start_convergence_worldwide.ps1  start_frontend.bat  start_worldwide.bat
src/: main.py
src/core/: logging_config.py  security.py  settings.py
src/db/: session.py
src/routers/: ai.py  api_v1.py  citizen.py  gov.py  health.py  legal.py
src/schemas/: citizen.py  gov.py  legal.py
tests/: test_health.py
(+86 files in other folders)
